<resources>
    <string name="app_name">Meetings</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_confirm_password">Confirm password is not equal with password</string>
    <string name="phone_digit_count_error">Phone number must be 11 digits</string>
    <string name="phone_number_format_error">Phone number format error</string>
    <string name="age_range_or_format_error">age range or format error</string>
    <string name="register_has_registered">Has registered</string>
    <string name="register_error">register error</string>
    <string name="update_error">update error</string>
    <string name="update_ok">update success</string>
    <string name="sign_out_success">sign out success</string>
    <string name="feedback_success">feedback success</string>
    <string name="feedback_null">please write feedback first</string>
    <string name="has_signed_out">has signed out</string>
    <string name="register_info_null">Register info null</string>
    <string name="no_login">please log in first</string>
    <string name="blank"> </string>

    <string name="title_profile">Profile</string>
    <string name="title_category">Timetable</string>
    <string name="title_new_post">Start Meeting</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_my_meeting">My Meetings</string>
    <string name="title_settings">Setting</string>
    <string name="title_search">Search</string>
    <string name="new_post_question">"What would you like to post"</string>
    <string name="lecture_description">"Lecture Description"</string>
    <string name="lecture_name">"Lecture Name"</string>
    <string name="save_changes">"Save Changes"</string>
    <string name="meet_name">"Meets Name Here.."</string>
    <string name="quick_description">"Quick Description"</string>
    <string name="add_meeting">" Add meeting "</string>
    <string name="cancel">" Cancel "</string>

    <string name="bt_info_modification">User info modification</string>
    <string name="user_info_modification">modification</string>
    <string name="feedback">Feedback</string>
    <string name="quick_help">Quick help</string>
    <string name="about_meeting">About meeting</string>
    <string name="sign_out">Sign out</string>
    <string name="login">Login</string>

    <string name="app_version">Meeting SchedulerV1.0</string>
    <string name="app_copyright">Copyright © 2020</string>
    <string name="app_update1">1.Add booking meeting function</string>
    <string name="app_update2">2.Add user feedback function</string>
    <string name="app_update3">3.test</string>

    <string name="app_help1">1.How to give feedback on meeting issues?\n
        Click the feedback list of the setting interface to enter the user feedback interface, enter the question to be feedback in the input box, and finally click the submit button in the upper right corner.</string>
    <string name="app_help2">2.How to modify user information?\n
        In the personal center interface, click the user information modification list. If you have not logged in, please log in first. If you are already logged in, you can modify the user information. It is best to click the modify button.</string>

    <string name="hint_feedback">Please write down your comments and suggestions</string>
    <string name="other_user_feedback">Other user feedback</string>

    <string name="home">Home</string>
    <string name="time_table">Time Table</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>

    <string name="submit">Submit</string>

    <string name="login_value">Sign in/Register</string>
    <string name="register_value">Register</string>
    <string name="my_meeting">My meeting</string>
    <string name="my_notes">My notes</string>
    <string name="my_timeslot_preference">My timeslot preference</string>
    <string name="sp_name">sp_name</string>

    <string name="monday">Monday</string>
    <string name="monday_letter">M</string>
    <string name="monday_short">Mon</string>
    <string name="tuesday">Tuesday</string>
    <string name="tuesday_letter">T</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday">Wednesday</string>
    <string name="wednesday_letter">W</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday">Thursday</string>
    <string name="thursday_letter">T</string>
    <string name="thursday_short">Thu</string>
    <string name="friday">Friday</string>
    <string name="friday_letter">F</string>
    <string name="friday_short">Fri</string>
    <string name="saturday">Saturday</string>
    <string name="saturday_letter">S</string>
    <string name="saturday_short">Sat</string>
    <string name="sunday">Sunday</string>
    <string name="sunday_first">Start week on Sunday</string>
    <string name="sunday_letter">S</string>
    <string name="sunday_short">Sun</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string-array name="months">
        <item>@string/january</item>
        <item>@string/february</item>
        <item>@string/march</item>
        <item>@string/april</item>
        <item>@string/may</item>
        <item>@string/june</item>
        <item>@string/july</item>
        <item>@string/august</item>
        <item>@string/september</item>
        <item>@string/october</item>
        <item>@string/november</item>
        <item>@string/december</item>
    </string-array>
    <array name="week_day_letters">
        <item>@string/monday_letter</item>
        <item>@string/tuesday_letter</item>
        <item>@string/wednesday_letter</item>
        <item>@string/thursday_letter</item>
        <item>@string/friday_letter</item>
        <item>@string/saturday_letter</item>
        <item>@string/sunday_letter</item>
    </array>
    <string-array name="week_days">
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
        <item>@string/sunday</item>
    </string-array>
    <array name="week_days_short">
        <item>@string/monday_short</item>
        <item>@string/tuesday_short</item>
        <item>@string/wednesday_short</item>
        <item>@string/thursday_short</item>
        <item>@string/friday_short</item>
        <item>@string/saturday_short</item>
        <item>@string/sunday_short</item>
    </array>
</resources>
