<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_category_black_24dp"
        android:title="@string/title_category" />

    <item
        android:id="@+id/navigation_meeting_lists"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/title_new_post" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

</menu>
