<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/post_status_bg"
        android:alpha="0.7">


        <EditText
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lecture_name"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textSize="30dp"
            android:layout_weight="0.5"/>

        <EditText
            android:id="@+id/editText"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:textSize="20dp"
            android:ems="60"
            android:inputType="textPersonName"
            android:text="@string/lecture_description"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/post_status_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.3"
            android:onClick="savePostStatus"
            android:text="@string/save_changes" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>