<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/icon"></ImageView>
        <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_user"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:visibility="gone"
            android:textSize="20dp">
        </TextView>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_user"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:text="@string/login_value"
            ></TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_info_modification"
        style="@style/setting_item_layout">

        <TextView
            style="@style/setting_item_text"
            android:text="@string/bt_info_modification" />

        <ImageView
            style="@style/img_arrow"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp" />
    </RelativeLayout>

    <ImageView style="@style/bg_line" />
    <RelativeLayout
        android:id="@+id/layout_my_meeting"
        style="@style/setting_item_layout">

        <TextView
            style="@style/setting_item_text"
            android:text="@string/my_meeting" />

        <ImageView
            style="@style/img_arrow"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp" />
    </RelativeLayout>

    <ImageView style="@style/bg_line" />

    <RelativeLayout
        android:id="@+id/layout_my_notes"
        style="@style/setting_item_layout">

        <TextView
            style="@style/setting_item_text"
            android:text="@string/my_notes" />

        <ImageView
            style="@style/img_arrow"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_timeslot_preference"
        style="@style/setting_item_layout">

        <TextView
            style="@style/setting_item_text"
            android:text="@string/my_timeslot_preference" />

        <ImageView
            style="@style/img_arrow"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp" />
    </RelativeLayout>

    <ImageView style="@style/bg_line" />

</LinearLayout>
